one way more to do carousel implementation

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,11 @@ body {
     justify-content: space-between;
     margin-top: 1rem;
 }
+
+.image-container img {
+    display: none;
+}
+
+.image-container img.active {
+    display: block;
+}
