--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,28 @@ body {
 .image-container img.active {
     display: block;
 }
+
+.dot-container {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+.dot {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    background-color: aliceblue;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dot .active {
+    height: 0.5rem;
+    width: 0.5rem;
+    border-radius: 50%;
+    background-color: tomato;
+    position: absolute;
+}
